# openresponses-rs

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-2-link  flake-profile-3-link  flake-profile-5-link  flake-profile-6-link
nix/: generate_from_spec.nix  oas3-gen.nix
src/: client.rs  lib.rs  types.rs
