[package]
edition = "2024"
name = "openresponses"
version = "0.1.0"

[dependencies]
anyhow = "1"
bon = "3.8"
oas3-gen-support = "0.24"
regex = "1"
reqwest = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3"
validator = { version = "0.20", features = ["derive"] }
